3rdYear/2ndSemester/Compiladores/P/aula2/bloco2/b2_04_incompleto/PrefixCalculator.g4
grammar PrefixCalculator;

program:
        stat* EOF
        ;

stat:   expr? NEWLINE
        ;

expr: 
        op = ('*'|'/'|'%') expr expr #ExprMultiDivMod
    |   op = ('+'|'-') expr expr     #ExprAddSub
    |   Integer                      #ExprInteger
    |   '(' expr ')'                 #ExprParent
    ;

Integer: [0-9]+;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
COMMENT: '#' .*? '\n' -> skip;
